# gittxt

./: .gitignore  404.html  Dockerfile  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
about/: index.html
api/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api-reference/: index.html
api-reference/inspect-endpoint/: index.html
api/endpoints/: cleanup.py  download.py  inspect.py  scan.py  summary.py  upload.py
api/schemas/: download.py  inspect.py  summary.py
api/services/: gittxt_runner.py
app/: index.html
changelog/: index.html
cli-reference/: index.html
cli-reference/clean/: index.html
cli-reference/config/: index.html
cli-reference/plugin/: index.html
cli-reference/re/: index.html
cli-reference/scan/: index.html
development/code-of-conduct/: index.html
development/contributing/: index.html
development/tests/: index.html
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  FORMATS.md  SECURITY.md  USAGE_EXAMPLES.md  about.md  app.md  changelog.md  code-of-conduct.md  formats.md  getting-started.md  index.md  reverse_engineer.md  security.md  usage.md
docs-legacy/: configuration.md  getting-started.md  scan.md
docs-mkdocs/: api-reference.md  changelog.md  cli_reference.md  contributing.md  security.md  usage.md
docs-mkdocs/overrides/partials/: footer.html
docs/api-reference/: index.md  inspect-endpoint.md
docs/cli-reference/: clean.md  config.md  index.md  plugin.md  re.md  scan.md
docs/development/: code-of-conduct.md  contributing.md  tests.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: output-formats.md  reverse-engineering.md  scanning.md
docs/user-guide/configuration/: cli-flags.md  environment-variables.md  filter-manager.md  gittxtignore.md  index.md  interactive-config.md
docs/user-guide/plugins/: api-plugin.md  index.md  streamlit-plugin.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
gittxt-docs/docs/: CONTRIBUTING.md  FORMATS.md  SECURITY.md
gittxt_web/backend/: Dockerfile  __main__.py  main.py  pyproject.toml  settings.py
gittxt_web/backend/api/v1/: __init__.py
gittxt_web/backend/api/v1/endpoints/: cleanup.py  download.py  inspect.py  scan.py  summary.py  upload.py
gittxt_web/backend/api/v1/models/: FROM python:3.dockerfile  [supervisord].conf  docker-compose.yml  scan_models.py
gittxt_web/backend/core/services/: scan_service.py  upload_service.py
gittxt_web/backend/docs/: overview.md
gittxt_web/backend/lambda/: lambda_handler.py  requirements.txt  template.yaml
gittxt_web/backend/layer/: requirements.txt
gittxt_web/backend/layer/python/chardet-5.2.0.dist-info/: RECORD
gittxt_web/backend/layer/python/charset_normalizer-3.4.2.dist-info/: RECORD
gittxt_web/backend/layer/python/gittxt-1.7.7.dist-info/: METADATA  RECORD  entry_points.txt
gittxt_web/backend/layer/python/gittxt/cli/: cli_reverse.py
gittxt_web/backend/layer/python/gittxt/core/: __init__.py  constants.py  logger.py  output_builder.py  repository.py
gittxt_web/backend/layer/python/gittxt/formatters/: json_formatter.py  text_formatter.py  zip_formatter.py
gittxt_web/backend/layer/python/gittxt/utils/: cleanup_utils.py  filetype_utils.py  formatter_utils.py  hash_utils.py  pattern_utils.py  subcat_utils.py  summary_utils.py  tree_utils.py
gittxt_web/backend/layer/python/markdown_it_py-3.0.0.dist-info/: RECORD
gittxt_web/backend/layer/python/pygments-2.19.1.dist-info/: RECORD
gittxt_web/backend/layer/python/python_dotenv-1.1.0.dist-info/: RECORD
gittxt_web/frontend/: package.json  server.conf  vite.config.ts
search/: search_index.json
src/gittxt/: __init__.py  __main__.py  cli.py  config.py  gittxt-config.json  gittxt-config.json.example  logger.py  output_builder.py  repository.py  scanner.py
src/gittxt-api/: Dockerfile  app.py  requirements.txt
src/gittxt-ui/: app.py  config.py  index.html  package-lock.json  package.json  utils.py
src/gittxt_api/: .env  app.py  config.py  lambda_handler.py  main.py  models.py  storage.py  utils.py  worker.py
src/gittxt_api_legacy/: requirements.txt
src/gittxt_ui/: app.py  forms.py  routes.py
streamlit_app/: requirements.txt
streamlit_app/ai/: ai_summary.py  chat_exporter.py  context_builder.py  llm_handler.py
streamlit_app/core/: __init__.py  __main__.py
streamlit_app/scan/: app.py  pipeline.py  ui_components.py
tests/: Makefile  README.md  conftest.py  generate_test_repo.py  test_api.py  test_api_edge_cases.py  test_api_endpoints.py  test_backend.py  test_cli.py  test_cli_edge_cases.py  test_cli_filters.py  test_cli_output.py  test_cli_run.py  test_file_structure.py  test_filetype_utils.py  test_formatter_sorting.py  test_gittxt_api.py  test_lite_mode.py  test_logger_config.py  test_output_builder.py  test_output_formats.py  test_pattern_utils.py  test_repo_handler.py  test_repo_url_parser.py  test_repository.py  test_repository_handler.py  test_reverse_engineer.py  test_scanner.py  test_subcat_utils.py  test_summary_utils.py  test_tree_utils.py  test_ui.py  test_ui_advanced.py  test_utils.py  test_utils_edge_cases.py  test_zip_bundle.py  test_zip_formatter.py
tests/api/: conftest.py  generate_test_repo.py  test_cleanup.py  test_download.py  test_endpoints.py  test_health.py  test_inspect.py  test_scan.py  test_summary.py  test_upload.py
tests/cli/: generate_test_repo.py  test_cli_run.py  test_formatter_sorting.py  test_lite_mode.py  test_output_formats.py  test_repo_handler.py  test_scanner.py  test_subcat_utils.py  test_zip_bundle.py
tests/test-repo/: README.md  app.py  data.customext  docs.md  fake_text.txt
user-guide/configuration/: index.html
user-guide/output-formats/: index.html
user-guide/plugins/: index.html
user-guide/reverse-engineering/: index.html
user-guide/scanning/: index.html
(+318 files in other folders)
