[project]
name = "gittxt-api"
version = "1.0.0"
description = "API backend for Gittxt: scan, preview, and export GitHub repositories or local folders."
authors = [
    {name = "sandy-sp",email = "sandeep.paidipati@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gittxt (>=1.7.2,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/sandy-sp/gittxt"
Repository = "https://github.com/sandy-sp/gittxt"

[project.scripts]
gittxt-api = "api.main:app"