[project]
name = "gittxt-web"
version = "0.1.0"
description = "FastAPI web API for the Gittxt code-to-text toolkit"
authors = [{name = "sandy-sp", email = "sandeep.paidipati@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.6.4",
  "pydantic-settings==2.2.1",
  "httpx==0.27.0",
  "starlette==0.36.3",
  "loguru==0.7.2",
  "rich==13.9.4",
  "watchdog==4.0.0",
  "gittxt>=1.7.7",            # â† the PyPI package you published
]

[project.scripts]
gittxt-web = "gittxt_web.__main__:cli"
